# claude-rs

./: .gitignore  AGENTS.md  Cargo.toml
crates/claude-rs-cli/: Cargo.toml
crates/claude-rs-cli/src/: inline_repl.rs  lib.rs  main.rs  tui.rs
crates/claude-rs-cli/tests/: inline_repl.rs  interactive_flow.rs
crates/claude-rs-core/: Cargo.toml
crates/claude-rs-core/src/: agents_md.rs  compaction.rs  lib.rs  permissions.rs  session.rs
crates/claude-rs-llm/: Cargo.toml
crates/claude-rs-llm/src/: lib.rs  openai.rs  provider.rs  types.rs
crates/claude-rs-sandbox/: Cargo.toml
crates/claude-rs-sandbox/src/: lib.rs
crates/claude-rs-tools/: Cargo.toml
crates/claude-rs-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  todo.rs  write.rs
docs/: design.md  unit-test-spec.md
test_reports/: report-2026-04-16.md
