[package]
name = "claude-rs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "claude-rs"
path = "src/main.rs"

[[bin]]
name = "crs"
path = "src/main.rs"

[dependencies]
claude-rs-core = { path = "../claude-rs-core" }
claude-rs-llm = { path = "../claude-rs-llm" }
claude-rs-tools = { path = "../claude-rs-tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
whoami = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
