[package]
name = "claude-rs-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
claude-rs-llm = { path = "../claude-rs-llm" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
similar = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
